This patch adds support for the AM35xx ZCN package specific muxmodes.
Signed-off-by: Raphael Assenat <raph@8d.com>

[this never got applied, see
http://www.mail-archive.com/linux-omap@vger.kernel.org/msg52332.html]

--- a/arch/arm/mach-omap2/Kconfig
+++ b/arch/arm/mach-omap2/Kconfig
@@ -136,6 +136,9 @@ config OMAP_PACKAGE_CBL
 config OMAP_PACKAGE_CBS
        bool
 
+config OMAP_PACKAGE_ZCN
+       bool
+
 comment "OMAP Board Type"
 	depends on ARCH_OMAP2PLUS
 
