bpp3: add bpp3 to mach types and config
Conflicts:
	arch/arm/mach-omap2/Kconfig

--- a/arch/arm/mach-omap2/Makefile
+++ b/arch/arm/mach-omap2/Makefile
@@ -241,7 +241,7 @@ obj-$(CONFIG_MACH_PCM049)		+= board-omap4pcm049.o
 obj-$(CONFIG_MACH_OMAP3517EVM)		+= board-am3517evm.o
 
 obj-$(CONFIG_MACH_CRANEBOARD)		+= board-am3517crane.o
-
+obj-$(CONFIG_MACH_BPP3)           	+= board-am3517_bpp3.o
 obj-$(CONFIG_MACH_SBC3530)		+= board-omap3stalker.o
 obj-$(CONFIG_MACH_TI8168EVM)		+= board-ti8168evm.o
 obj-$(CONFIG_MACH_TI8148EVM)		+= board-ti8168evm.o
