--- a/arch/arm/configs/am3517_bpp3_defconfig
+++ b/arch/arm/configs/am3517_bpp3_defconfig
@@ -1227,7 +1227,7 @@ CONFIG_UNIX98_PTYS=y
 CONFIG_LEGACY_PTYS=y
 CONFIG_LEGACY_PTY_COUNT=4
 # CONFIG_SERIAL_NONSTANDARD is not set
-# CONFIG_N_GSM is not set
+CONFIG_N_GSM=y
 # CONFIG_TRACE_SINK is not set
 CONFIG_DEVKMEM=y
 
