--- a/arch/arm/configs/am3517_ccgx_defconfig
+++ b/arch/arm/configs/am3517_ccgx_defconfig
@@ -330,7 +330,7 @@ CONFIG_OMAP_PACKAGE_ZCN=y
 # CONFIG_MACH_IGEP0030 is not set
 # CONFIG_MACH_SBC3530 is not set
 # CONFIG_MACH_OMAP_3630SDP is not set
-CONFIG_MACH_BPP3=y
+CONFIG_MACH_CCGX=y
 # CONFIG_OMAP3_EMU is not set
 # CONFIG_OMAP3_SDRC_AC_TIMING is not set
 
