--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -513,6 +513,18 @@ config MISC_RTSX
 	tristate
 	default MISC_RTSX_PCI || MISC_RTSX_USB
 
+config CANVU_IO
+	tristate "CANvu digital/analog I/O controller"
+	depends on OF
+	select GPIOLIB
+	select IRQ_SIM
+	select SERIAL_DEV_BUS
+
+config CANVU_IO_GPIO_BASE
+	int "GPIO number base"
+	default -1
+	depends on CANVU_IO
+
 source "drivers/misc/c2port/Kconfig"
 source "drivers/misc/eeprom/Kconfig"
 source "drivers/misc/cb710/Kconfig"
