auxdisplay: charlcd: add help text for backlight initial state
While the individual CHARLCD_BL_xxx options have help texts, the
menu itself does not.  Fix this.

Signed-off-by: Mans Rullgard <mans@mansr.com>

--- a/drivers/auxdisplay/Kconfig
+++ b/drivers/auxdisplay/Kconfig
@@ -448,6 +448,8 @@ config PANEL_BOOT_MESSAGE
 choice
 	prompt "Backlight initial state"
 	default CHARLCD_BL_FLASH
+	---help---
+	  Select the initial backlight state on boot or module load.
 
 	config CHARLCD_BL_OFF
 		bool "Off"
