--- a/arch/arm/boot/dts/sun7i-a20-einstein-ccgx2.dts
+++ b/arch/arm/boot/dts/sun7i-a20-einstein-ccgx2.dts
@@ -46,8 +46,8 @@
 #include <dt-bindings/input/input.h>
 
 / {
-	model = "Color Control GX2";
-	compatible = "victronenergy,ccgx2",
+	model = "Cerbo GX";
+	compatible = "victronenergy,cerbo-gx",
 		     "cubietech,einstein",
 		     "allwinner,sun7i-a20";
 
