configs: bbb: enable userspace crypto api

--- a/arch/arm/configs/bbb_defconfig
+++ b/arch/arm/configs/bbb_defconfig
@@ -300,5 +300,8 @@ CONFIG_SCHEDSTATS=y
 CONFIG_TIMER_STATS=y
 # CONFIG_DEBUG_BUGVERBOSE is not set
 # CONFIG_TRACING_EVENTS_GPIO is not set
+CONFIG_CRYPTO_USER=y
 # CONFIG_CRYPTO_ECHAINIV is not set
+CONFIG_CRYPTO_USER_API_HASH=y
+CONFIG_CRYPTO_USER_API_SKCIPHER=y
 # CONFIG_CRYPTO_HW is not set
